Add 'cp' Command

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "commander": "^5.1.0",
     "esbuild": "^0.5.19",
+    "glob": "^7.1.6",
     "standard": "^14.3.4"
   },
   "devDependencies": {},
