--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "commander": "^8.3.0",
+    "cross-spawn": "^7.0.3",
     "esbuild": "^0.13.13",
     "glob": "^7.2.0",
     "standard": "^16.0.4"
