--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,36 +6,15 @@ on:
     - 'v*'
 
 jobs:
-  check:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [14, 16]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-npm-cache-
-      - name: Verify
-        run: |
-          npm i
-          npm run preversion
-  npm:
-    runs-on: ubuntu-latest
-    needs: check
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Publish
-      run: |
-        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
-        npm publish --access public
+  ci:
+    uses: vanillaes/.github/.github/workflows/verify.yml@main
+
+  cd-npm:
+    needs: ci
+    uses: vanillaes/.github/.github/workflows/npm.yml@main
+    secrets: inherit
+
+  cd-gh:
+    needs: ci
+    uses: vanillaes/.github/.github/workflows/gh.yml@main
+    secrets: inherit
